--- a/static/css/components/buttons.scss
+++ b/static/css/components/buttons.scss
@@ -22,6 +22,11 @@ button,
     letter-spacing: 1px;
     border: solid 1px $white;
     text-transform: uppercase;
+    
+    @include large-mobile {
+        width: 110px;
+        font-size: 12px;
+    }
 }
 
 button:hover,
